--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -1,9 +1,9 @@
 <div class="my-5">
     <div class="p-5 text-center bg-body-tertiary">
       <div class="container py-5">
-        <h1 class="text-body-emphasis">Full-width jumbotron</h1>
+        <h1 class="text-body-emphasis">{{ companyName }}</h1>
         <p class="col-lg-8 mx-auto lead">
-          This takes the basic jumbotron above and makes its background edge-to-edge with a <code>.container</code> inside to align content. Similar to above, it's been recreated with built-in grid and utility classes.
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem consequatur quos ratione quis amet placeat dicta soluta? Enim reiciendis fugit temporibus iure error impedit velit pariatur illo praesentium, ad earum incidunt non provident itaque iusto molestias, ducimus vel officia excepturi quos veritatis quo? Voluptatum quis, natus vel magnam quod laudantium. Adipisci nihil hic voluptatibus qui omnis.
         </p>
       </div>
     </div>
