--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,7 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+
 #topPart {
     background-image: url("../assets/images/big-air-1283525.jpg");
     background-size: cover;
 }
+
