--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,6 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
+
 .myNavbarBtn {
     background-color: white;
 }
 .myNavbarBtn:hover {
     background-color: black;
+}
+.myIcon {
+    
+    margin-right: 15px;
+}
+h3, .myIcon {
+    font-family: 'Kalam', cursive;
+    font-size: 32px;
+    color: white;
+    text-shadow: 0px 0px 7px black;
 }
