--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,18 +1,25 @@
 <div class="container" id="navbarContainer">
-    <header class="d-flex justify-content-center py-3">
-      <ul class="nav nav-pills">
-        <li class="nav-item">
-          <a routerLink="" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">Home</button></a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="#" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">Pricing</button></a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="#" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">FAQs</button></a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="about" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">About</button></a>
-        </li>
-      </ul>
+    <header class="d-flex justify-content-between py-3">
+      <div class="d-flex flex-row align-items-center">
+        <i class="bi bi-emoji-sunglasses myIcon"></i>
+        <h3 class="m-0">Austrian Winter Experience GmbH</h3>
+      </div>
+      <div>
+        <ul class="nav nav-pills">
+          <li class="nav-item">
+            <a routerLink="" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">Home</button></a>
+          </li>
+          <li class="nav-item">
+            <a routerLink="#" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">Pricing</button></a>
+          </li>
+          <li class="nav-item">
+            <a routerLink="#" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">FAQs</button></a>
+          </li>
+          <li class="nav-item">
+            <a routerLink="about" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">About</button></a>
+          </li>
+        </ul>
+      </div>
+      
     </header>
   </div>
