--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -5,8 +5,8 @@
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. In nihil exercitationem dolorem non iure consequatur dolor incidunt repellendus quia! Tenetur totam ipsa, unde, corporis soluta quae porro ducimus cumque quibusdam possimus quaerat. Eligendi vitae, quasi quam accusamus fuga quas magni. Illum commodi ipsa non iste.</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <a routerLink=""><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myHeroBtn">Home</button></a>
-        <a routerLink="about"><button type="button" class="btn btn-outline-dark btn-lg px-4 myHeroBtn">About</button></a>
+        <!-- <a routerLink=""><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myHeroBtn">Home</button></a> -->
+        <a routerLink="about"><button type="button" class="btn btn-outline-dark btn-lg px-4 myHeroBtn">Learn more</button></a>
       </div>
     </div>
   </div>
