--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -6,12 +6,12 @@
         <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../assets/images/boy-1835416_640.jpg'); background-size: cover;">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Family Hotel St. Anton</h3>
-            <ul class="d-flex list-unstyled mt-auto">
-              <li class="d-flex align-items-center me-3">
-                <small>St. Anton</small>
+            <ul class="list-unstyled mt-auto rounded p-2">
+              <li class="">
+                <span>starting at € 650 pax/night</span>
               </li>
-              <li class="d-flex align-items-center">
-                <small>Austria</small>
+              <li class="">
+                <span>St. Anton, Austria</span>
               </li>
             </ul>
           </div>
@@ -22,12 +22,12 @@
         <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../assets/images/man-498473_640.jpg'); background-size: cover;">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Adventure Hotel Gosau</h3>
-            <ul class="d-flex list-unstyled mt-auto">
-              <li class="d-flex align-items-center me-3">
-                <small>Gosau</small>
+            <ul class="list-unstyled mt-auto rounded p-2">
+              <li class="">
+                <span>starting at € 540 pax/night</span>
               </li>
-              <li class="d-flex align-items-center">
-                <small>Austria</small>
+              <li class="">
+                <span>Gosau, Austria</span>
               </li>
             </ul>
           </div>
@@ -38,12 +38,12 @@
         <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../assets/images/ski-race-2246889_640.jpg'); background-size: cover;">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Sport Hotel Innsbruck</h3>
-            <ul class="d-flex list-unstyled mt-auto">
-              <li class="d-flex align-items-center me-3">
-                <small>Innsbruck</small>
+            <ul class="list-unstyled mt-auto rounded p-2">
+              <li class="">
+                <span>starting at € 700 pax/night</span>
               </li>
-              <li class="d-flex align-items-center">
-                <small>Austria</small>
+              <li class="">
+                <span>Innsbruck, Austria</span>
               </li>
             </ul>
           </div>
@@ -54,12 +54,12 @@
         <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../assets/images/skiing-5878729_640.jpg'); background-size: cover;">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Ski and Snowboard Camp Arlberg</h3>
-            <ul class="d-flex list-unstyled mt-auto">
-              <li class="d-flex align-items-center me-3">
-                <small>Arlberg</small>
+            <ul class="list-unstyled mt-auto rounded p-2">
+              <li class="">
+                <span>starting at € 460 pax/night</span>
               </li>
-              <li class="d-flex align-items-center">
-                <small>Austria</small>
+              <li class="">
+                <span>Arlberg, Austria</span>
               </li>
             </ul>
           </div>
@@ -70,12 +70,12 @@
         <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../assets/images/winter-4697776_640.jpg'); background-size: cover;">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">4Star Luxury Ski Resort Millstatt</h3>
-            <ul class="d-flex list-unstyled mt-auto">
-              <li class="d-flex align-items-center me-3">
-                <small>Millstatt</small>
+            <ul class="list-unstyled mt-auto rounded p-2">
+              <li class="">
+                <span>starting at € 990 pax/night</span>
               </li>
-              <li class="d-flex align-items-center">
-                <small>Austria</small>
+              <li class="">
+                <span>Millstatt, Austria</span>
               </li>
             </ul>
           </div>
@@ -86,12 +86,12 @@
         <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../assets/images/winter-4727668_640.jpg'); background-size: cover;">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Pension Gruber Filzmoos</h3>
-            <ul class="d-flex list-unstyled mt-auto">
-              <li class="d-flex align-items-center me-3">
-                <small>Filzmoos</small>
+            <ul class="list-unstyled mt-auto rounded p-2">
+              <li class="">
+                <span>starting at € 310 pax/night</span>
               </li>
-              <li class="d-flex align-items-center">
-                <small>Austria</small>
+              <li class="">
+                <span>Filzmoos, Austria</span>
               </li>
             </ul>
           </div>
