--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -1,7 +1,10 @@
-<div class="my-5">
-    <div class="p-5 text-center bg-body-tertiary">
-      <div class="container py-5">
-        <h1 class="text-body-emphasis">{{ companyName }}</h1>
+<div class="my-2 targetElm">
+    <div class="p-5 text-center">
+      <div class="container py-2">
+        <div class="d-flex justify-content-center align-items-center">
+          <i class="bi bi-emoji-sunglasses myIcon me-3"></i>
+          <h2 class="m-0">{{ companyName }}</h2>
+        </div>
         <p class="col-lg-8 mx-auto lead">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem consequatur quos ratione quis amet placeat dicta soluta? Enim reiciendis fugit temporibus iure error impedit velit pariatur illo praesentium, ad earum incidunt non provident itaque iusto molestias, ducimus vel officia excepturi quos veritatis quo? Voluptatum quis, natus vel magnam quod laudantium. Adipisci nihil hic voluptatibus qui omnis.
         </p>
