--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <header class="d-flex justify-content-between py-3">
       <div class="d-flex flex-row align-items-center">
         <i class="bi bi-emoji-sunglasses myIcon"></i>
-        <h3 class="m-0">Austrian Winter Experience GmbH</h3>
+        <h3 class="m-0">{{ companyName }}</h3>
       </div>
       <div>
         <ul class="nav nav-pills">
@@ -10,10 +10,7 @@
             <a routerLink="" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">Home</button></a>
           </li>
           <li class="nav-item">
-            <a routerLink="#" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">Pricing</button></a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="#" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">FAQs</button></a>
+            <a routerLink="faqs" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">FAQs</button></a>
           </li>
           <li class="nav-item">
             <a routerLink="about" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">About</button></a>
