--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,7 +1,7 @@
-<div class="container px-4 py-5" id="custom-cards">
+<div class="container px-4 pt-5 targetElm" id="custom-cards">
     <h2 class="pb-2 border-bottom">Featured Destinations:</h2>
 
-    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-2">
       <div class="col">
         <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../assets/images/boy-1835416_640.jpg'); background-size: cover;">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
@@ -98,5 +98,15 @@
         </div>
       </div>
       
+    </div>
+  </div>
+  <div class="container">
+    <div class="d-flex justify-content-between w-100">
+      <div> </div>
+      <div>
+        <a routerLink="#navbarContainer">
+          <i class="bi bi-arrow-up-circle p-3"></i>
+        </a>
+      </div>
     </div>
   </div>
