--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="container" id="navbarContainer">
+<div class="container myNavbar" id="navbarContainer">
     <header class="d-flex justify-content-between py-3">
       <div class="d-flex flex-row align-items-center">
         <i class="bi bi-emoji-sunglasses myIcon"></i>
@@ -13,7 +13,11 @@
             <a routerLink="faqs" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">FAQs</button></a>
           </li>
           <li class="nav-item">
-            <a routerLink="about" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">About</button></a>
+            <a routerLink="about" class="nav-link btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">
+              <button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">
+                About
+              </button>
+            </a>
           </li>
         </ul>
       </div>
