--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,7 +13,7 @@
             <a routerLink="faqs" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">FAQs</button></a>
           </li>
           <li class="nav-item">
-            <a routerLink="about" class="nav-link btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">
+            <a routerLink="about" class="nav-link">
               <button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">
                 About
               </button>
