--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,14 +7,17 @@
       <div>
         <ul class="nav nav-pills">
           <li class="nav-item">
-            <a routerLink="" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">Home</button></a>
+            <a routerLink="" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-2 gap-1 myNavbarBtn">Home</button></a>
           </li>
           <li class="nav-item">
-            <a routerLink="faqs" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">FAQs</button></a>
+            <a routerLink="featured" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-2 gap-1 myNavbarBtn">Destinations</button></a>
+          </li>
+          <li class="nav-item">
+            <a routerLink="faqs" class="nav-link"><button type="button" class="btn btn-outline-dark btn-lg px-2 gap-1 myNavbarBtn">Contact</button></a>
           </li>
           <li class="nav-item">
             <a routerLink="about" class="nav-link">
-              <button type="button" class="btn btn-outline-dark btn-lg px-4 gap-3 myNavbarBtn">
+              <button type="button" class="btn btn-outline-dark btn-lg px-2 gap-1 myNavbarBtn">
                 About
               </button>
             </a>
