--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,6 +2,7 @@
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a routerLink="" class="nav-link px-2 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a routerLink="featured" class="nav-link px-2 text-body-secondary">Destinations</a></li>
         <li class="nav-item"><a routerLink="faqs" class="nav-link px-2 text-body-secondary">FAQs</a></li>
         <li class="nav-item"><a routerLink="about" class="nav-link px-2 text-body-secondary">About</a></li>
       </ul>
