--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,112 +1,55 @@
-<div class="container px-4 pt-5 targetElm" id="custom-cards">
-    <h2 class="pb-2 border-bottom">Featured Destinations:</h2>
+<div class="container px-4 py-5">
+  <h2 class="pb-2 border-bottom">Features with title</h2>
 
-    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-2">
-      <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../assets/images/boy-1835416_640.jpg'); background-size: cover;">
-          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Family Hotel St. Anton</h3>
-            <ul class="list-unstyled mt-auto rounded p-2">
-              <li class="">
-                <span>starting at € 650 pax/night</span>
-              </li>
-              <li class="">
-                <span>St. Anton, Austria</span>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../assets/images/man-498473_640.jpg'); background-size: cover;">
-          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Adventure Hotel Gosau</h3>
-            <ul class="list-unstyled mt-auto rounded p-2">
-              <li class="">
-                <span>starting at € 540 pax/night</span>
-              </li>
-              <li class="">
-                <span>Gosau, Austria</span>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../assets/images/ski-race-2246889_640.jpg'); background-size: cover;">
-          <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Sport Hotel Innsbruck</h3>
-            <ul class="list-unstyled mt-auto rounded p-2">
-              <li class="">
-                <span>starting at € 700 pax/night</span>
-              </li>
-              <li class="">
-                <span>Innsbruck, Austria</span>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../assets/images/skiing-5878729_640.jpg'); background-size: cover;">
-          <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Ski and Snowboard Camp Arlberg</h3>
-            <ul class="list-unstyled mt-auto rounded p-2">
-              <li class="">
-                <span>starting at € 460 pax/night</span>
-              </li>
-              <li class="">
-                <span>Arlberg, Austria</span>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../assets/images/winter-4697776_640.jpg'); background-size: cover;">
-          <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">4Star Luxury Ski Resort Millstatt</h3>
-            <ul class="list-unstyled mt-auto rounded p-2">
-              <li class="">
-                <span>starting at € 990 pax/night</span>
-              </li>
-              <li class="">
-                <span>Millstatt, Austria</span>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../assets/images/winter-4727668_640.jpg'); background-size: cover;">
-          <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Pension Gruber Filzmoos</h3>
-            <ul class="list-unstyled mt-auto rounded p-2">
-              <li class="">
-                <span>starting at € 310 pax/night</span>
-              </li>
-              <li class="">
-                <span>Filzmoos, Austria</span>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      
+  <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
+    <div class="col d-flex flex-column align-items-start gap-2">
+      <h2 class="fw-bold text-body-emphasis">Left-aligned title explaining these awesome features</h2>
+      <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+      <a href="#" class="btn btn-primary btn-lg">Primary button</a>
     </div>
-  </div>
-  <div class="container">
-    <div class="d-flex justify-content-between w-100">
-      <div> </div>
-      <div>
-        <a routerLink="#navbarContainer">
-          <i class="bi bi-arrow-up-circle p-3"></i>
-        </a>
+
+    <div class="col">
+      <div class="row row-cols-1 row-cols-sm-2 g-4">
+        <div class="col d-flex flex-column gap-2">
+          <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+            <svg class="bi" width="1em" height="1em">
+              <use xlink:href="#collection"></use>
+            </svg>
+          </div>
+          <h4 class="fw-semibold mb-0 text-body-emphasis">Featured title</h4>
+          <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+        </div>
+
+        <div class="col d-flex flex-column gap-2">
+          <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+            <svg class="bi" width="1em" height="1em">
+              <use xlink:href="#gear-fill"></use>
+            </svg>
+          </div>
+          <h4 class="fw-semibold mb-0 text-body-emphasis">Featured title</h4>
+          <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+        </div>
+
+        <div class="col d-flex flex-column gap-2">
+          <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+            <svg class="bi" width="1em" height="1em">
+              <use xlink:href="#speedometer"></use>
+            </svg>
+          </div>
+          <h4 class="fw-semibold mb-0 text-body-emphasis">Featured title</h4>
+          <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+        </div>
+
+        <div class="col d-flex flex-column gap-2">
+          <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+            <svg class="bi" width="1em" height="1em">
+              <use xlink:href="#table"></use>
+            </svg>
+          </div>
+          <h4 class="fw-semibold mb-0 text-body-emphasis">Featured title</h4>
+          <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+        </div>
       </div>
     </div>
   </div>
+</div>
